2005-01-24  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el:
	(my-c-mode-common-hook): add M-RET to continue a comment, make Qt accesse valid
	redefine c-guess-basic-syntax to honor Qt-related changes

2005-01-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(mapcond): fixed some bugs
	more documentation strings

	* dotemacs.el:
	suppressed special frame for compilation buffers
	more documentation strings
	dwim-compile utilities
	(kbd): use kbd for keybindings

	* dotemacs-cust.el:
	(custom-set-variables): more reftex settings

	* config/tabbar-config.el:
	(yh/tabbar-inhibit-function): moved here from dotemacs.el

2005-01-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/multi-region.el:
	new version

2005-01-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/cedet-config.el:
	disable semantic-load-turn-useful-things-on

2005-01-16  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(minimal): use completion-config from now

	* dotemacs-cust.el:
	(custom-set-variables): use partial-completion-mode, fix desktop usage

	* config/completion-config.el:
	initial checkin, completion-related stuff

	* SConstruct:
	begin using scons to maintain my config

2005-01-13  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(uniquify): endly... the end of those buffer<2>

2005-01-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	(gnus-agent): activated
	(gnus-select-article-hook): activate caching...

	* dotemacs-cust.el:
	(custom-set-variables): gnus should cache anything it can

	* config/muse-config.el:
	(muse-mode-highlight-p): highlighting is too buggy to be useful. Maybe investigate this later

	* config/fracc-config.el:
	re-enabled fracc

2005-01-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(backup-by-copying): preserve links after modifications

	* dotemacs-cust.el:
	(custom-set-variables): muse settings for charsets

2005-01-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el: